--- a/EscapeLaberinto/EscapeLaberinto.vcxproj
+++ b/EscapeLaberinto/EscapeLaberinto.vcxproj
@@ -135,10 +135,12 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Personaje.cpp" />
     <ClCompile Include="Colisionable.cpp" />
+    <ClCompile Include="Laberinto.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Colisionable.h" />
     <ClInclude Include="Enemigo.h" />
+    <ClInclude Include="Laberinto.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemPowerUp.h" />
     <ClInclude Include="Personaje.h" />
