--- a/EscapeLaberinto/EscapeLaberinto.vcxproj
+++ b/EscapeLaberinto/EscapeLaberinto.vcxproj
@@ -139,12 +139,14 @@
     <ClCompile Include="Personaje.cpp" />
     <ClCompile Include="Colisionable.cpp" />
     <ClCompile Include="Laberinto.cpp" />
+    <ClCompile Include="Enemigo2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArchivoPartida.h" />
     <ClInclude Include="Colisionable.h" />
     <ClInclude Include="Enemigo.h" />
     <ClInclude Include="GuardarPartida.h" />
+    <ClInclude Include="Enemigo2.h" />
     <ClInclude Include="Laberinto.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemPowerUp.h" />
