--- a/EscapeLaberinto/EscapeLaberinto.vcxproj.filters
+++ b/EscapeLaberinto/EscapeLaberinto.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Menu.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Enemigo2.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
     <ClCompile Include="GuardarPartida.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
@@ -66,6 +69,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Menu.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemigo2.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="GuardarPartida.h">
