mis cambios en progreso

--- a/EscapeLaberinto/EscapeLaberinto.vcxproj
+++ b/EscapeLaberinto/EscapeLaberinto.vcxproj
@@ -135,7 +135,9 @@
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="ItemPowerUp.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mapas.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Nivel.cpp" />
     <ClCompile Include="Personaje.cpp" />
     <ClCompile Include="Colisionable.cpp" />
     <ClCompile Include="Laberinto.cpp" />
@@ -150,7 +152,9 @@
     <ClInclude Include="Laberinto.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemPowerUp.h" />
+    <ClInclude Include="Mapas.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="Nivel.h" />
     <ClInclude Include="Personaje.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
